# VoxelRuler

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  flake.nix  justfile  rust-toolchain.toml
.claude/agent/: README.md  status.md
.claude/agent/tasks/: task-01-infra.md  task-02-model.md  task-03-ui.md  task-04-view.md
.claude/conversations/: 2026-05-19.md  2026-05-20.md  2026-05-25.md  2026-05-27.md
.claude/docs/: dev-standards.md  feature-specs.md  git-conventions.md  task-assignment.md
.claude/rule/: TODO.md
.forgejo/workflows/: ci.yml  release.yml
css/: theme.css
data/: 1.0.json  1.1.json  1.10.1.json  1.10.2.json  1.10.json  1.11.1.json  1.11.2.json  1.11.json  1.12.1.json  1.12.2.json  1.12.json  1.13.1.json  1.13.2.json  1.13.json  1.14.1.json  1.14.2.json  1.14.3.json  1.14.4.json  1.14.json  1.15.1.json  1.15.2.json  1.15.json  1.16.1.json  1.16.2.json  1.16.3.json  1.16.4.json  1.16.5.json  1.16.json  1.17.1.json  1.17.json  1.18.1.json  1.18.2.json  1.18.json  1.19.1.json  1.19.2.json  1.19.3.json  1.19.4.json  1.19.json  1.2.1.json  1.2.2.json  (+61 more)
docs/superpowers/plans/: 2026-05-27-create-instance-dialog.md
docs/superpowers/specs/: 2026-05-27-create-instance-dialog-design.md
src/: main.rs  mc_action.rs  mc_api.rs  mc_install.rs  mc_instance.rs  mc_parser.rs  mc_paths.rs  mc_token.rs  mc_types.rs  url_handler.rs  view.rs
ui/: VoxelRuler.pot  app-window.slint  global.slint  main.slint  test.slint  theme.slint
ui/assets/: index.slint
ui/components/: file-progress.slint  footer.slint  index.slint  log-dialog.slint  minecraft-card.slint  url-dialog.slint
ui/components/pages/: account-table.slint  account.slint  create-instance-dialog.slint  home.slint  index.slint  instances.slint  mods.slint  offline-account-dialog.slint
ui/components/sidebar/: avatar.slint  button.slint  index.slint
ui/translations/en_US/LC_MESSAGES/: voxelruler.mo  voxelruler.po
ui/translations/zh_TW/LC_MESSAGES/: voxelruler.mo  voxelruler.po
