[package]
name = "voxelruler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
gluesql = { version = "0.19.0", default-features = false, features = ["gluesql-redb-storage"] }
minecraft-msa-auth = "0.4.0"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# slint = {version = "1.16.1",features = ["gettext"] }
slint = "1.16.1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
url = "2"

[profile.release]
codegen-units = 1
lto = true

[build-dependencies]
slint-build = "1.16.1"
