[package]
name = "voxelruler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
gluesql = { version = "0.19.0", default-features = false, features = ["gluesql-redb-storage"] }
minecraft-msa-auth = "0.4.0"
oauth2 = "5.0.0"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12", features = ["stream"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
slint = "1.16.1"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["fs", "macros", "rt-multi-thread", "tracing", "windows-sys"] }
url = "2"
keyring = "4.0.1"
keyring-core = "1.0.0"
chrono = { version = "0.4.44", features = ["clock", "oldtime"], default-features = false }
getset = "0.1.6"
dashmap = { version = "6.2.1", features = ["serde"] }
open = "5.3.5"
regex = "1.12.3"
futures-util = "0.3.32"

[profile.release]
codegen-units = 1
lto = "thin"

[build-dependencies]
slint-build = "1.16.1"


[package.metadata.packager]
product-name = "VoxelRuler"
identifier = "com.Duacodie.VoxelRuler"
out-dir = "./dist"
before-packaging-command = "cargo build --release -vvv"
category = "Game"
description = "A minecraft Launcher"
long-description = """
VoxelRuler 是一款專為 Minecraft 玩家打造的啟動器，提供簡潔直觀的界面和強大的功能，讓玩家能夠輕鬆管理和啟動 Minecraft 遊戲。無論是單人遊戲還是多人伺服器，VoxelRuler 都能提供穩定的性能和優化的體驗，讓玩家專注於享受 Minecraft 的樂趣。
VoxelRuler is a Minecraft launcher designed for players, offering a simple and intuitive interface along with powerful features to easily manage and launch Minecraft games. Whether it's single-player or multiplayer servers, VoxelRuler provides stable performance and an optimized experience, allowing players to focus on enjoying the fun of Minecraft.
"""

formats = [
  "default"
]

[package.metadata.packager.windows]
# 可以設定安裝檔的歡迎畫面圖片、授權條款 (EULA) 等
# license-file = "LICENSE.rtf"
[package.metadata.packager.linux]
generate-desktop-entry = true

[profile.dev]
incremental = true
opt-level = 0
debug = true
codegen-units = 16
lto = false

# [profile.dev.package."*"]
# opt-level = 3